@@ -272,7 +272,7 @@ enum AtCommandType {
 	AtCommand_ToNPC, // LuzZza
 	AtCommand_Commands, // [Skotlex]
 	AtCommand_NoAsk, // [LuzZza]
-	AtCommand_Request, // [Skotlex], supposedly taken from Freya (heard the command was there, but I haven't seen the code yet)
+	AtCommand_Request, // [Skotlex]
 	AtCommand_HomLevel, //[orn]
 	AtCommand_HomEvolution, //[orn]
 	AtCommand_MakeHomun, //[orn]
@@ -294,22 +294,16 @@ typedef struct AtCommandInfo {
 	AtCommandType type;
 	const char* command;
 	int level;
-	int (*proc)(const int, struct map_session_data*,
-		const char* command, const char* message);
+	int (*proc)(const int fd, struct map_session_data* sd, const char* command, const char* message);
 } AtCommandInfo;
 
-AtCommandType
-is_atcommand(const int fd, struct map_session_data* sd, const char* message);
-AtCommandType
-is_atcommand_sub(const int fd, struct map_session_data* sd, const char* str, int gmlvl);
-
-AtCommandType atcommand(
-	struct map_session_data *sd,
-	const int level, const char* message, AtCommandInfo* info);
+AtCommandType is_atcommand(const int fd, struct map_session_data* sd, const char* message);
+AtCommandType is_atcommand_sub(const int fd, struct map_session_data* sd, const char* str, int gmlvl);
+AtCommandType atcommand(struct map_session_data *sd, const int level, const char* message, AtCommandInfo* info);
 int get_atcommand_level(const AtCommandType type);
 
-char * msg_txt(int msg_number); // [Yor]
-char * player_title_txt(int level); // [Lupus]
+char* msg_txt(int msg_number); // [Yor]
+char* player_title_txt(int level); // [Lupus]
 
 void do_init_atcommand(void);
 void do_final_atcommand(void);
@@ -324,12 +318,12 @@ int atcommand_config_read(const char *cfgName);
 int msg_config_read(const char *cfgName);
 void do_final_msg(void);
 
-char *estr_lower(char *str);
+char* estr_lower(char* str);
 
-int e_mail_check(char *email);
+int e_mail_check(char* email);
 extern char atcommand_symbol;
 #define MAX_MSG 1000
-extern char *msg_table[MAX_MSG];
+extern char* msg_table[MAX_MSG];
 
 #endif
 
